@@ -34,7 +34,8 @@
     <nav aria-label="Page Navigation">
         <ul class="pagination justify-content-center pagination-sm">
             {{ $currentPage := .currentPage }}
-
+            {{ $start := (max 0 (sub $currentPage (mod $currentPage 10))) }}
+            {{ $end := (min (len .pages) (add $currentPage (sub 10 (mod $currentPage 10)))) }}
 
             <li class="page-item {{ if eq $currentPage 0 }}disabled{{ end }}">
                 <a class="page-link"
@@ -45,16 +46,14 @@
             </li>
 
 
-            <li class="page-item {{ if eq $currentPage 0 }}disabled{{ end }}">
+            <li class="page-item {{ if eq $start 0 }}disabled{{ end }}">
                 <a class="page-link"
-                {{ if eq $currentPage 0 }}tabindex="-1"{{ end }}
-                   href="?page={{ add $currentPage -1 }}">
+                {{ if eq $start 0 }}tabindex="-1"{{ end }}
+                   href="?page={{ sub $start 10 }}">
                     <i class="fas fa-caret-left fa-fw"></i>
                 </a>
             </li>
 
-            {{ $start := (max 0 (sub $currentPage 3)) }}
-            {{ $end := (min (len .pages) (add $currentPage 4)) }}
 
             {{ range $i, $no := (slice .pages $start $end) }}
                 <li class="page-item {{ if eq $currentPage $no }}disabled{{ end }}">
@@ -66,10 +65,10 @@
             {{ end }}
 
 
-            <li class="page-item {{ if or (eq $currentPage (add (len .pages) -1)) (eq (len .pages) 0) }}disabled{{ end }}">
+            <li class="page-item {{ if or (gt $end (add (len .pages) -1)) (eq (len .pages) 0) }}disabled{{ end }}">
                 <a class="page-link"
-                {{ if eq $currentPage (add (len .pages) -1) }}tabindex="-1"{{ end }}
-                   href="?page={{ add $currentPage 1 }}">
+                {{ if gt $end (add (len .pages) -1) }}tabindex="-1"{{ end }}
+                   href="?page={{ $end }}">
                     <i class="fas fa-caret-right fa-fw"></i>
                 </a>
             </li>
